[project]
name = "gs_street_view"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jourdelune", email = "jourdelune863@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastsam>=0.0.1.dev0",
    "opencv-python>=4.12.0.88",
    "requests",
    "segment-anything-fast>=0.1.2",
    "simple-lama-inpainting>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
