[project]
name = "gs_street_view"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jourdelune", email = "jourdelune863@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "fastsam>=0.0.1.dev0",
    "ipywidgets>=8.1.7",
    "monai>=1.5.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "py360convert>=1.0.4",
    "requests",
    "segment-anything-fast>=0.1.2",
    "simple-lama-inpainting>=0.1.0",
    "transformers>=4.53.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
